# QtBugPropertyVarMapGC

./: .gitignore  CMakeLists.txt  CrashLog-Qt6_8_6-macOS26-trackpad.ips  InputPoint.h  Main.qml  README.md  main.cpp
